# fastcode

hw01/: ex1.tex  homework.tex
hw01/daxpy/: daxpy.c  not_vectorized  plot.py  run.sh
hw01/mmm/: mmm.c  not_vectorized  plot.py  run.sh
hw02/: homework.tex
hw02/microbench/: CMakeLists.txt  funcs.h  gcc_nosse  main.cpp  main.h  microbench.c  microbench.h  microbench_cos.c  microbench_exp.c  microbench_log.c  microbench_oneover.c  microbench_sin.c  microbench_squared.c
hw02/superslow/: Makefile  Makefile_generic  comp copy.c  comp.c  comp.h  perf.c  perf.h  smat.c  smat.h  verfunc.c  verfunc.h  verify.c  verify.h
hw03/: homework.tex
hw05/: code0.c  code2.c  code3.c  finalcode.c  homework.tex  main.c
hw05/code/: code0.c  code1.c  finalcode.c  finalcode_176.c  main.c  main.h  matrix_run_13_04_16__13_45.pickle  matrix_run_13_04_16__15_49.pickle  matrix_run_13_04_16__16_19.pickle  plot.py  plot_final.py  run_13_04_16__10_48.pickle  set_cpu_frequency.sh  test_code.py  test_final.py
hw06/: homework.tex
hw06/vectorization/: auto.asm  base.asm  base.c  main.c  manual.c  manual1.c  manual2.c  manual3.c  manual4.c  plot_final.py  run_13_05_10__23_31.pickle  test_code.py
hw06/warmup/: auto.asm  auto.c  base.asm  base.c  main.c  manual.c  plot.py  plot_final.py  test_code.py  test_final.py
